Bumped sbt version.